# QTravel/src/routes/webhook.routes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const WebhookController = require('../controllers/webhook.controller');
+
+router.post('/hotel-order', WebhookController.handleHotelOrder);
+
+module.exports = router;
